# qmusic

./: .gitignore  CMakeLists.txt  README.md  license.txt
cmake/: build_components.cmake  (+10 more)
source/framework/: CMakeLists.txt
source/framework/include/: Application.h  AudioBuffer.h  AudioDevice.h  AudioDevicesManager.h  AudioUnit.h  AudioUnitPlugin.h  AudioUnitsManager.h  ControlInputPort.h  ControlOutputPort.h  ControlPort.h  ControllerEvent.h  CrashReporter.h  EventRouter.h  ExposedInput.h  ExposedOutput.h  FilterAbstractImpl.h  FrameworkApi.h  IAudioUnit.h  IEventRouter.h  IExposedInput.h  IExposedOutput.h  IFilter.h  ISerializable.h  ISerializableFactory.h  ISignalChain.h  ISignalChainSceneContainer.h  InputPort.h  InputPortProxy.h  Logger.h  MidiNote.h  NoteOffEvent.h  NoteOnEvent.h  OutputPort.h  OutputPortProxy.h  PitchBendEvent.h  Port.h  SerializationContext.h  SerializationFile.h  Settings.h  Signal.h  (+14 more)
source/framework/resources/: framework.qrc  style.qss
source/framework/src/: Application.cpp  AudioBuffer.cpp  AudioDevice.cpp  AudioDevicesManager.cpp  AudioUnit.cpp  AudioUnitPlugin.cpp  AudioUnitsManager.cpp  ControlInputPort.cpp  ControlOutputPort.cpp  ControlPort.cpp  ControllerEvent.cpp  CrashReporter.cpp  EventRouter.cpp  ExposedInput.cpp  ExposedOutput.cpp  IExposedInput.cpp  IExposedOutput.cpp  ISignalChainSceneContainer.cpp  InputPort.cpp  InputPortProxy.cpp  Logger.cpp  MidiNote.cpp  NoteOffEvent.cpp  NoteOnEvent.cpp  OutputPort.cpp  OutputPortProxy.cpp  PitchBendEvent.cpp  Port.cpp  SerializationContext.cpp  SerializationFile.cpp  Settings.cpp  SignalChain.cpp  SignalChainAudioUnitItem.cpp  SignalChainConnectionItem.cpp  SignalChainControlConnectionItem.cpp  SignalChainControlItem.cpp  SignalChainEvent.cpp  SignalChainFactory.cpp  SignalChainItem.cpp  SignalChainPortItem.cpp  (+4 more)
source/plugins/: CMakeLists.txt
source/plugins/au-adder/: CMakeLists.txt
source/plugins/au-adder/include/: Adder.h  AdderPlugin.h  AdderPlugin.json
source/plugins/au-adder/resources/: au-adder.qrc
source/plugins/au-adder/src/: Adder.cpp  AdderPlugin.cpp
source/plugins/au-amplifier/: CMakeLists.txt
source/plugins/au-amplifier/include/: Amplifier.h  AmplifierPlugin.h  AmplifierPlugin.json
source/plugins/au-amplifier/resources/: au-amplifier.qrc
source/plugins/au-amplifier/src/: Amplifier.cpp  AmplifierPlugin.cpp
source/plugins/au-audio-sink/: CMakeLists.txt
source/plugins/au-audio-sink/include/: AudioSink.h  AudioSinkPlugin.h  AudioSinkPlugin.json  AudioSinkThreadObject.h
source/plugins/au-audio-sink/resources/: au-audio-sink.qrc
source/plugins/au-audio-sink/src/: AudioSink.cpp  AudioSinkPlugin.cpp  AudioSinkThreadObject.cpp
source/plugins/au-biquad/: CMakeLists.txt
source/plugins/au-biquad/include/: BiQuadFilterPlugin.h  BiQuadFilterPlugin.json  BiQuadFilterUnit.h
source/plugins/au-biquad/resources/: au-biquadfilter.qrc
source/plugins/au-constant/: CMakeLists.txt
source/plugins/au-delay/: CMakeLists.txt
source/plugins/au-dial/: CMakeLists.txt
source/plugins/au-envelope/: CMakeLists.txt
source/plugins/au-expose-input/: CMakeLists.txt
source/plugins/au-expose-output/: CMakeLists.txt
source/plugins/au-generator/: CMakeLists.txt
source/plugins/au-generator-noise/: CMakeLists.txt
source/plugins/au-generator-sine/: CMakeLists.txt
source/plugins/au-input/: CMakeLists.txt
source/plugins/au-lhpfilter/: CMakeLists.txt
source/plugins/au-math-expression/: CMakeLists.txt
source/plugins/au-midi-in/: CMakeLists.txt
source/plugins/au-midi-in-ctrl/: CMakeLists.txt
source/plugins/au-mixer/: CMakeLists.txt
source/plugins/au-multiplier/: CMakeLists.txt
source/plugins/au-openair/: CMakeLists.txt
source/plugins/au-poly-container/: CMakeLists.txt
source/plugins/au-slider/: CMakeLists.txt
source/plugins/au-speaker/: CMakeLists.txt
source/plugins/au-stk-beethree/: CMakeLists.txt
source/plugins/au-stk-biquad/: CMakeLists.txt
source/plugins/au-stk-bowed/: CMakeLists.txt
source/plugins/au-stk-brass/: CMakeLists.txt
source/plugins/au-stk-clarinet/: CMakeLists.txt
source/plugins/au-stk-cubic/: CMakeLists.txt
source/plugins/au-stk-flute/: CMakeLists.txt
source/plugins/au-stk-freeverb/: CMakeLists.txt
source/plugins/au-stk-guitar/: CMakeLists.txt
source/plugins/au-stk-jcrev/: CMakeLists.txt
source/plugins/au-stk-rhodey/: CMakeLists.txt
source/plugins/au-stk-saxofony/: CMakeLists.txt
(+340 files in other folders)
