add_subdirectory(au-poly-container)
add_subdirectory(au-speaker)
add_subdirectory(au-midi-in)
add_subdirectory(au-midi-in-ctrl)
add_subdirectory(au-input)
add_subdirectory(au-generator)
add_subdirectory(au-generator-sine)
add_subdirectory(au-adder)
add_subdirectory(au-multiplier)
add_subdirectory(au-mixer)
add_subdirectory(au-constant)
add_subdirectory(au-lhpfilter)
add_subdirectory(au-envelope)
add_subdirectory(au-delay)
add_subdirectory(au-expose-input)
add_subdirectory(au-expose-output)
add_subdirectory(au-stk-jcrev)
add_subdirectory(au-stk-cubic)
add_subdirectory(au-stk-guitar)
add_subdirectory(au-stk-rhodey)
add_subdirectory(au-stk-beethree)
add_subdirectory(au-stk-saxofony)
add_subdirectory(au-stk-clarinet)
add_subdirectory(au-stk-flute)
add_subdirectory(au-stk-brass)
